--- a/.github/工作流程/docker-image.yml
+++ b/.github/工作流程/docker-image.yml
@@ -10,6 +10,6 @@ jobs:
         uses: elgohr/Publish-Docker-Github-Action@master
         with:
           # 下方的name格式为：Docker Hub ID/自定义镜像名称
-          name: qaz758521/qq
+          name: qaz758521/789
           username: '${{ secrets.DOCKER_USERNAME }}'
           password: '${{ secrets.DOCKER_PASSWORD }}'
